<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/add_dialog_date_label"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:id="@+id/tvDate"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/add_dialog_weight_label"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="4dp"
        android:hint="@string/weight_hint"
        android:inputType="numberDecimal"
        android:textSize="16sp" />
    <TextView
        android:visibility="invisible"
        android:id="@+id/weight_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textSize="12dp"
        android:textColor="#ff0000"
        android:text="@string/add_dialog_weight_hint"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="8dp">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:height="36dp"
            android:minWidth="88dp"
            android:text="@string/btn_save_text"
            android:textAllCaps="true"
            android:textSize="14sp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnSave"
            android:height="36dp"
            android:minWidth="88dp"
            android:text="@string/btn_cancel_text"
            android:textAllCaps="true"
            android:textSize="14sp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>
    </RelativeLayout>

</LinearLayout>